tests/wpt/tests/third_party/test262/test/language/expressions/dynamic-import/import-attributes/2nd-param-yield-ident-invalid.js
// Copyright (C) 2021 the V8 project authors. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.
/*---
description: >
  ImportCall parameter list forwards the Yield production parameter - invalid IdentifierReference
esid: sec-import-call-runtime-semantics-evaluation
info: |
  ImportCall[Yield, Await]:
    import ( AssignmentExpression[+In, ?Yield, ?Await] ,opt )
    import ( AssignmentExpression[+In, ?Yield, ?Await] , AssignmentExpression[+In, ?Yield, ?Await] ,opt )
features: [dynamic-import, import-attributes]
flags: [onlyStrict]
negative:
  phase: parse
  type: SyntaxError
---*/
$DONOTEVALUATE();

import('./empty_FIXTURE.js', yield);
